--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "postbuild": "react-snap"
+    "postbuild": "react-snap",
+    "start": "node server.js"
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
@@ -18,11 +19,14 @@
     "maath": "^0.5.2",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-router": "^6.19.0",
     "react-router-dom": "^6.8.1",
     "react-snap": "^1.23.0",
     "react-tilt": "^0.1.4",
+    "react-typed": "^1.2.0",
     "react-vertical-timeline-component": "^3.6.0",
     "rerousel": "^0.1.9",
     "scroll-carousel-react": "^1.0.0",
