updating web service

--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "animejs": "^3.2.1",
     "framer-motion": "^9.0.7",
     "maath": "^0.5.2",
-    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router": "^6.19.0",
     "react-router-dom": "^6.8.1",
+    "react-share": "^5.0.2",
     "react-snap": "^1.23.0",
     "react-tilt": "^0.1.4",
     "react-typed": "^1.2.0",
-    "react-vertical-timeline-component": "^3.6.0",
+    "react-whatsapp-widget": "^2.2.0",
     "rerousel": "^0.1.9",
     "scroll-carousel-react": "^1.0.0",
     "three": "^0.149.0"
