--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "animejs": "^3.2.2",
     "framer-motion": "^9.1.7",
     "maath": "^0.5.3",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-phone-number-input": "^3.3.8",
     "react-router": "^6.19.0",
     "react-router-dom": "^6.20.1",
     "react-share": "^5.0.3",
