adding blog page

--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@react-three/fiber": "^8.15.12",
     "animejs": "^3.2.2",
     "framer-motion": "^9.1.7",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
+    "html-react-parser": "^5.1.1",
     "maath": "^0.5.3",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-multi-carousel": "^2.8.4",
     "react-phone-number-input": "^3.3.8",
     "react-router": "^6.19.0",
     "react-router-dom": "^6.20.1",
@@ -31,6 +35,7 @@
     "react-typed": "^1.2.0",
     "react-whatsapp-widget": "^2.2.0",
     "rerousel": "^0.1.9",
+    "sass": "^1.69.7",
     "three": "^0.149.0"
   },
   "devDependencies": {
