--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@headlessui/react": "^1.7.18",
     "@react-three/drei": "^9.89.3",
     "@react-three/fiber": "^8.15.12",
     "animejs": "^3.2.2",
@@ -25,17 +26,21 @@
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-js-loader": "^0.1.3",
     "react-multi-carousel": "^2.8.4",
     "react-phone-number-input": "^3.3.8",
     "react-router": "^6.19.0",
     "react-router-dom": "^6.20.1",
     "react-share": "^5.0.3",
     "react-snap": "^1.23.0",
+    "react-spinners": "^0.13.8",
     "react-tilt": "^0.1.4",
+    "react-toastify": "^10.0.5",
     "react-typed": "^1.2.0",
     "react-whatsapp-widget": "^2.2.0",
     "rerousel": "^0.1.9",
     "sass": "^1.69.7",
+    "tailwind-scrollbar": "^3.1.0",
     "three": "^0.149.0",
     "vite-plugin-react-refresh": "^1.0.0"
   },
