--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emailjs/browser": "^3.11.0",
     "@headlessui/react": "^1.7.18",
     "@react-three/drei": "^9.89.3",
-    "@react-three/fiber": "^8.15.12",
+    "@react-three/fiber": "^8.16.2",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^9.1.7",
     "graphql": "^16.8.1",
@@ -33,6 +33,7 @@
     "react-toastify": "^10.0.5",
     "react-typed": "^1.2.0",
     "sass": "^1.69.7",
+    "three": "^0.163.0",
     "vite-plugin-react-refresh": "^1.0.0"
   },
   "devDependencies": {
